Fixed the docroot

--- a/puppet/modules/web/files/web.conf
+++ b/puppet/modules/web/files/web.conf
@@ -1,6 +1,6 @@
 # file managed by puppet
 <VirtualHost *:80>
-  DocumentRoot /var/www/vhosts/html
+  DocumentRoot /var/www/vhosts/web
   RewriteEngine on
   RewriteRule   ^/projects/(.+)  http://wiki.theforeman.org/projects/$1  [R,L]
   RewriteRule   ^/issues/(.+)  http://wiki.theforeman.org/issues/$1  [R,L]
