--- a/puppet/modules/web/files/web.conf
+++ b/puppet/modules/web/files/web.conf
@@ -1,9 +1,9 @@
 # file managed by puppet
 <VirtualHost *:80>
-  DocumentRoot /var/www/vhosts/web
+  DocumentRoot /var/www/vhosts/html
   RewriteEngine on
-  RewriteRule   ^/projects/(.+)  http://wiki.theforeman.org/projects/$1  [R,L]
-  RewriteRule   ^/issues/(.+)  http://wiki.theforeman.org/issues/$1  [R,L]
+  RewriteRule   ^/projects/(.+)  http://projects.theforeman.org/projects/$1  [R,L]
+  RewriteRule   ^/issues/(.+)  http://projects.theforeman.org/issues/$1  [R,L]
 
   ErrorLog /var/log/httpd/error_log
   LogLevel warn
