Add missing redirect for theforeman.org/versions to redmine

--- a/puppet/modules/web/files/web.conf
+++ b/puppet/modules/web/files/web.conf
@@ -4,6 +4,7 @@
   RewriteEngine on
   RewriteRule   ^/projects(.*)  http://projects.theforeman.org/projects$1  [R,L]
   RewriteRule   ^/issues(.*)  http://projects.theforeman.org/issues$1  [R,L]
+  RewriteRule   ^/versions(.*)  http://projects.theforeman.org/versions$1  [R,L]
   RewriteRule   ^/wiki(.*)  http://projects.theforeman.org/wiki$1  [R,L]
 
   ErrorLog /var/log/httpd/error_log
