Add rvm to Jenkins slaves with Ruby 1.8.7, 1.9.2, 1.9.3 and 2.0.0
rvm module currently points at a fork of upstream with a slightly slimmer
package set.

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "puppet/modules/jenkins"]
 	path = puppet/modules/jenkins
 	url = git://github.com/rtyler/puppet-jenkins.git
+[submodule "puppet/modules/rvm"]
+	path = puppet/modules/rvm
+	url = git://github.com/domcleal/puppet-rvm.git
