Specify ServerName in web vhost so it doesn't hit default

--- a/puppet/modules/web/files/web.conf
+++ b/puppet/modules/web/files/web.conf
@@ -1,5 +1,8 @@
 # file managed by puppet
 <VirtualHost *:80>
+  ServerName theforeman.org
+  ServerAlias www.theforeman.org
+
   DocumentRoot /var/www/vhosts/html
   RewriteEngine on
   RewriteRule   ^/projects(.*)  http://projects.theforeman.org/projects$1  [R,L]
