Change theforeman.org vhost to point to cap site deployment

--- a/puppet/modules/web/files/web.conf
+++ b/puppet/modules/web/files/web.conf
@@ -3,7 +3,7 @@
   ServerName theforeman.org
   ServerAlias www.theforeman.org
 
-  DocumentRoot /var/www/vhosts/html
+  DocumentRoot /var/www/vhosts/web_theforeman.org
   RewriteEngine on
   RewriteRule   ^/projects(.*)  http://projects.theforeman.org/projects$1  [R,L]
   RewriteRule   ^/issues(.*)  http://projects.theforeman.org/issues$1  [R,L]
