Add /releases/latest alias to yum repos

--- a/puppet/modules/web/files/yum.theforeman.org.conf
+++ b/puppet/modules/web/files/yum.theforeman.org.conf
@@ -6,6 +6,8 @@
     Options Indexes FollowSymLinks
   </Directory>
 
+  Alias /releases/latest /releases/1.1
+
   LogLevel warn
   ServerSignature Off
 
