Add /manuals/latest redirect to /manuals/1.1

--- a/puppet/modules/web/files/web.conf
+++ b/puppet/modules/web/files/web.conf
@@ -10,6 +10,8 @@
   RewriteRule   ^/versions(.*)  http://projects.theforeman.org/versions$1  [R,L]
   RewriteRule   ^/wiki(.*)  http://projects.theforeman.org/wiki$1  [R,L]
 
+  RewriteRule   ^/manuals/latest(.*) /manuals/1.1$1 [R,L]
+
   ErrorLog /var/log/httpd/error_log
   LogLevel warn
   CustomLog /var/log/httpd/access_log combined
