--- a/.gitmodules
+++ b/.gitmodules
@@ -40,3 +40,6 @@
 [submodule "puppet/modules/puppetlabs_repo"]
 	path = puppet/modules/puppetlabs_repo
 	url = git://github.com/stahnma/puppetlabs-puppetlabs_repo.git
+[submodule "puppet/modules/ssh_statickeys"]
+	path = puppet/modules/ssh_statickeys
+	url = https://github.com/GregSutcliffe/puppet-ssh_statickeys
