--- a/.gitmodules
+++ b/.gitmodules
@@ -43,3 +43,6 @@
 [submodule "puppet/modules/ssh_statickeys"]
 	path = puppet/modules/ssh_statickeys
 	url = https://github.com/GregSutcliffe/puppet-ssh_statickeys
+[submodule "puppet/modules/dirvish"]
+	path = puppet/modules/dirvish
+	url = https://github.com/GregSutcliffe/puppet-dirvish
