creating rewrites for fcNN -> fNN

--- a/puppet/modules/web/files/yum.theforeman.org.conf
+++ b/puppet/modules/web/files/yum.theforeman.org.conf
@@ -4,6 +4,13 @@
 
   <Directory />
     Options Indexes FollowSymLinks
+
+    <IfModule mod_rewrite.c>
+      # rewrite /fc42/ -> /f42/
+      RewriteEngine On
+      RewriteRule (.*)/fc(\d+)/(.*) $1/f$2/$3
+    </IfModule>
+
   </Directory>
 
   LogLevel warn
