creating rewrites for fcNN -> fNN and elN - fix

--- a/puppet/modules/web/files/yum.theforeman.org.conf
+++ b/puppet/modules/web/files/yum.theforeman.org.conf
@@ -2,7 +2,7 @@
   DocumentRoot         /var/www/vhosts/yum/htdocs
   ServerName           yum.theforeman.org
 
-  <Directory />
+  <Directory /var/www/vhosts/yum/htdocs>
     Options Indexes FollowSymLinks
 
     <IfModule mod_rewrite.c>
