Add puppi submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -55,3 +55,6 @@
 [submodule "puppet/modules/sendmail"]
 	path = puppet/modules/sendmail
 	url = https://github.com/example42/puppet-sendmail.git
+[submodule "puppet/modules/puppi"]
+	path = puppet/modules/puppi
+	url = https://github.com/example42/puppi.git
