Change SSH git module URL to HTTPS to fix deploys

--- a/.gitmodules
+++ b/.gitmodules
@@ -54,4 +54,4 @@
 	url = https://github.com/theforeman/puppet-passenger.git
 [submodule "puppet/modules/monit"]
 	path = puppet/modules/monit
-	url = git@github.com:puppetmodules/puppet-module-monit.git
+	url = https://github.com/puppetmodules/puppet-module-monit.git
