--- a/.gitmodules
+++ b/.gitmodules
@@ -55,3 +55,6 @@
 [submodule "puppet/modules/monit"]
 	path = puppet/modules/monit
 	url = https://github.com/puppetmodules/puppet-module-monit.git
+[submodule "puppet/modules/timezone"]
+	path = puppet/modules/timezone
+	url = https://github.com/BashtonLtd/puppet-timezone.git
