--- a/.gitmodules
+++ b/.gitmodules
@@ -58,3 +58,6 @@
 [submodule "puppet/modules/timezone"]
 	path = puppet/modules/timezone
 	url = https://github.com/BashtonLtd/puppet-timezone.git
+[submodule "puppet/modules/rsync"]
+	path = puppet/modules/rsync
+	url = https://github.com/puppetlabs/puppetlabs-rsync.git
