Add npm + deps to slaves for Katello JS testing

--- a/.gitmodules
+++ b/.gitmodules
@@ -61,3 +61,6 @@
 [submodule "puppet/modules/rsync"]
 	path = puppet/modules/rsync
 	url = https://github.com/puppetlabs/puppetlabs-rsync.git
+[submodule "puppet/modules/nodejs"]
+	path = puppet/modules/nodejs
+	url = https://github.com/puppetlabs/puppetlabs-nodejs.git
