--- a/.gitmodules
+++ b/.gitmodules
@@ -64,3 +64,6 @@
 [submodule "puppet/modules/nodejs"]
 	path = puppet/modules/nodejs
 	url = https://github.com/puppetlabs/puppetlabs-nodejs.git
+[submodule "puppet/modules/augeasproviders"]
+	path = puppet/modules/augeasproviders
+	url = git://github.com/hercules-team/augeasproviders.git
