--- a/.gitmodules
+++ b/.gitmodules
@@ -67,3 +67,6 @@
 [submodule "puppet/modules/augeasproviders"]
 	path = puppet/modules/augeasproviders
 	url = git://github.com/hercules-team/augeasproviders.git
+[submodule "puppet/modules/concat_native"]
+	path = puppet/modules/concat_native
+	url = https://github.com/theforeman/puppet-concat
