Use per-vhost logs

--- a/puppet/modules/web/files/downloads.theforeman.org.conf
+++ b/puppet/modules/web/files/downloads.theforeman.org.conf
@@ -9,8 +9,8 @@
   LogLevel warn
   ServerSignature Off
 
-  ErrorLog /var/log/httpd/error_log
+  ErrorLog /var/www/vhosts/downloads/logs/error.log
   LogLevel warn
-  CustomLog /var/log/httpd/access_log combined
+  CustomLog /var/www/vhosts/downloads/logs/access.log combined
   ServerSignature Off
 </VirtualHost>
