--- a/puppet/modules/web/files/yum.theforeman.org.conf
+++ b/puppet/modules/web/files/yum.theforeman.org.conf
@@ -16,8 +16,8 @@
   LogLevel warn
   ServerSignature Off
 
-  ErrorLog /var/log/httpd/error_log
+  ErrorLog /var/www/vhosts/yum/logs/error.log
   LogLevel warn
-  CustomLog /var/log/httpd/access_log combined
+  CustomLog /var/www/vhosts/yum/logs/access.log combined
   ServerSignature Off
 </VirtualHost>
