--- a/.gitmodules
+++ b/.gitmodules
@@ -70,3 +70,6 @@
 [submodule "puppet/modules/concat_native"]
 	path = puppet/modules/concat_native
 	url = https://github.com/theforeman/puppet-concat
+[submodule "puppet/modules/mount_providers"]
+	path = puppet/modules/mount_providers
+	url = https://github.com/puppetlabs/puppetlabs-mount_providers.git
