Fix Files Apache section name

--- a/puppet/modules/web/files/yum.theforeman.org.conf
+++ b/puppet/modules/web/files/yum.theforeman.org.conf
@@ -14,10 +14,10 @@
 
   # Prevent top-level repodata file being cached
   <IfModule mod_expires.c>
-    <File "repomd.xml">
+    <Files "repomd.xml">
       ExpiresActive on
       ExpiresDefault "access plus 0 seconds"
-    </File>
+    </Files>
   </IfModule>
 
   LogLevel warn
