Update initial JJB job set from XML review

--- a/puppet/modules/jenkins_job_builder/files/config/yaml/jobs/deploy_deb.yaml
+++ b/puppet/modules/jenkins_job_builder/files/config/yaml/jobs/deploy_deb.yaml
@@ -1,6 +1,15 @@
 - job:
     name: deploy_deb
     node: 'debian'
+    logrotate:
+      daysToKeep: 2
+      numToKeep: -1
+    properties:
+      - throttle:
+          max-per-node: 0
+          max-total: 0
+          enabled: false
+          option: project
     scm:
       - foreman-infra
     builders:
