--- a/puppet/modules/jenkins_job_builder/files/config/yaml/jobs/release_nightly_push_deb.yaml
+++ b/puppet/modules/jenkins_job_builder/files/config/yaml/jobs/release_nightly_push_deb.yaml
@@ -1,6 +1,10 @@
 - job:
     name: release_nightly_push_deb
     project-type: matrix
+    block-upstream: true
+    logrotate:
+      daysToKeep: 2
+      numToKeep: -1
     builders:
       - trigger-builds:
         - project: deploy_deb
