Update initial JJB job set from XML review

--- a/puppet/modules/jenkins_job_builder/files/config/yaml/publishers/systest_foreman.yaml
+++ b/puppet/modules/jenkins_job_builder/files/config/yaml/publishers/systest_foreman.yaml
@@ -2,8 +2,9 @@
     name: systest_foreman
     publishers:
     - archive:
-        artifacts: '*.tar.gz'
+        artifacts: 'debug/*,*.bats.out,*.tap'
         allow-empty: true
+        only-successful: true
     - tap:
         results: '*.bats.out'
         fail-if-no-results: true
