Remove duplicate gemset_cleanup script

--- a/puppet/modules/jenkins_job_builder/files/config/yaml/jobs/test_proxy_develop.yaml
+++ b/puppet/modules/jenkins_job_builder/files/config/yaml/jobs/test_proxy_develop.yaml
@@ -37,7 +37,7 @@
     builders:
       - test_proxy
     publishers:
-    - gemset_cleanup_proxy
+    - gemset_cleanup
     - ircbot_freenode
     - junit:
         results: 'jenkins/reports/unit/*.xml'
