[jjb] Fix formatting in katello.org SCM yaml

--- a/puppet/modules/jenkins_job_builder/files/config/yaml/scm/katello.org.yaml
+++ b/puppet/modules/jenkins_job_builder/files/config/yaml/scm/katello.org.yaml
@@ -5,7 +5,7 @@
          url: git://github.com/Katello/katello.org.git
          wipe-workspace: false
          branches:
-          - master
-          - */Katello-2.0
-          - */Katello-2.1
-          - */Katello-2.2
+          - 'master'
+          - '*/Katello-2.0'
+          - '*/Katello-2.1'
+          - '*/Katello-2.2'
