--- a/puppet/modules/jenkins_job_builder/files/config/yaml/jobs/packaging_build_deb_coreproject.yaml
+++ b/puppet/modules/jenkins_job_builder/files/config/yaml/jobs/packaging_build_deb_coreproject.yaml
@@ -20,8 +20,8 @@
           name: os
           values:
           - wheezy
+          - jessie
           - precise
-          - squeeze
           - trusty
       - axis:
           type: slave
@@ -29,7 +29,7 @@
           values:
           - debian
     execution-strategy:
-      combination-filter: '(onlyos == "all" && os != "squeeze") || onlyos == "os"'
+      combination-filter: '(onlyos == "all" && os != "jessie") || onlyos == "os"'
     builders:
       - build_deb_coreproject
     publishers:
@@ -52,8 +52,8 @@ Any value other than "theforeman" will be pushed to http://stagingdeb.theforeman
           choices:
             - all
             - wheezy
+            - jessie
             - precise
-            - squeeze
             - trusty
           description: 'Restrict matrix job to just the one OS.'
       - string:
