Build Jessie packages by default

--- a/puppet/modules/jenkins_job_builder/files/config/yaml/jobs/packaging_build_deb_coreproject.yaml
+++ b/puppet/modules/jenkins_job_builder/files/config/yaml/jobs/packaging_build_deb_coreproject.yaml
@@ -29,7 +29,7 @@
           values:
           - debian
     execution-strategy:
-      combination-filter: '(onlyos == "all" && os != "jessie") || onlyos == os'
+      combination-filter: '(onlyos == "all") || onlyos == os'
     builders:
       - build_deb_coreproject
     publishers:
