Test and push Jessie packages by default

--- a/puppet/modules/jenkins_job_builder/files/config/yaml/jobs/release_nightly_push_deb.yaml
+++ b/puppet/modules/jenkins_job_builder/files/config/yaml/jobs/release_nightly_push_deb.yaml
@@ -16,6 +16,7 @@
           name: os
           values:
           - wheezy
+          - jessie
           - precise
           - trusty
     publishers:
