--- a/puppet/modules/jenkins_job_builder/files/config/yaml/jobs/release_nightly_test_deb.yaml
+++ b/puppet/modules/jenkins_job_builder/files/config/yaml/jobs/release_nightly_test_deb.yaml
@@ -21,6 +21,7 @@
           name: os
           values:
           - wheezy
+          - jessie
           - precise
           - trusty
     publishers:
