Populate all other test_plugin_* jobs

--- a/puppet/modules/jenkins_job_builder/files/config/yaml/scm/foreman_plugin.yaml
+++ b/puppet/modules/jenkins_job_builder/files/config/yaml/scm/foreman_plugin.yaml
@@ -5,4 +5,4 @@
          url: git://github.com/theforeman/{repo}.git
          wipe-workspace: false
          branches:
-          - 'master'
+          - '{branch}'
