Change to keep repoclosure jobs for 7 days.

--- a/puppet/modules/jenkins_job_builder/files/config/yaml/jobs/packaging_repoclosure.yaml
+++ b/puppet/modules/jenkins_job_builder/files/config/yaml/jobs/packaging_repoclosure.yaml
@@ -1,6 +1,9 @@
 - job:
     name: packaging_repoclosure
     node: el
+    logrotate:
+      daysToKeep: 7
+      numToKeep: -1
     scm:
       - foreman-rpm-packaging
     builders:
