--- a/puppet/modules/jenkins_job_builder/files/config/yaml/jobs/systest_foreman.yaml
+++ b/puppet/modules/jenkins_job_builder/files/config/yaml/jobs/systest_foreman.yaml
@@ -31,6 +31,11 @@
           default: false
           description: 'Whether to enable nightly Puppet repos, use in addition to pl_puppet.'
       - bool:
+          name: run_puppet_tests
+          # disable by default once Puppet tests are run on their own schedule
+          default: true
+          description: 'Whether to run additional Foreman/Puppet integration tests.'
+      - bool:
           name: run_hammer_tests
           default: false
           description: 'Whether to run additional hammer tests (https://github.com/theforeman/hammer-tests).'
