Create systest_foreman_puppet to test Puppet integration
Import existing systest_foreman_puppet_nightly

--- a/puppet/modules/jenkins_job_builder/files/config/yaml/jobs/systest_foreman.yaml
+++ b/puppet/modules/jenkins_job_builder/files/config/yaml/jobs/systest_foreman.yaml
@@ -32,8 +32,7 @@
           description: 'Whether to enable nightly Puppet repos, use in addition to pl_puppet.'
       - bool:
           name: run_puppet_tests
-          # disable by default once Puppet tests are run on their own schedule
-          default: true
+          default: false
           description: 'Whether to run additional Foreman/Puppet integration tests.'
       - bool:
           name: run_hammer_tests
