Add systest_foreman_mysql job to test with MySQL server

--- a/puppet/modules/jenkins_job_builder/files/config/yaml/jobs/systest_foreman.yaml
+++ b/puppet/modules/jenkins_job_builder/files/config/yaml/jobs/systest_foreman.yaml
@@ -53,5 +53,9 @@
 
 E.g.
 <code>https://github.com/theforeman/hammer-cli.git#test</code>'
+      - string:
+          name: db_type
+          default: ''
+          description: 'Database server to use, default is PostgreSQL (postgresql/mysql/sqlite)'
     publishers:
       - systest_foreman
