--- a/puppet/modules/jenkins_job_builder/files/config/yaml/jobs/plugins/foreman_remote_execution.yaml
+++ b/puppet/modules/jenkins_job_builder/files/config/yaml/jobs/plugins/foreman_remote_execution.yaml
@@ -1,5 +1,8 @@
 - project:
     name: foreman_remote_execution
     defaults: plugin
+    branch:
+      - master:
+          foreman_branch: 1.9-stable
     jobs:
       - 'test_plugin_{name}_{branch}'
