Change default IRC notifier to only print parent job

--- a/puppet/modules/jenkins_job_builder/files/config/yaml/jobs/release_nightly_test_deb.yaml
+++ b/puppet/modules/jenkins_job_builder/files/config/yaml/jobs/release_nightly_test_deb.yaml
@@ -28,4 +28,4 @@
       - trigger:
           project: release_nightly_push_deb
           threshold: SUCCESS
-      - ircbot_freenode
+      - ircbot_freenode_matrix
