--- a/puppet/modules/jenkins_job_builder/files/config/yaml/publishers/ircbot_freenode.yaml
+++ b/puppet/modules/jenkins_job_builder/files/config/yaml/publishers/ircbot_freenode.yaml
@@ -12,4 +12,20 @@
         channels:
             - name: '#theforeman-dev'
               notify-only: true
+        matrix-notifier: only-parent
+
+- publisher:
+    name: ircbot_freenode_matrix
+    publishers:
+    - ircbot:
+        strategy: failure-and-fixed
+        notify-start: false
+        notify-committers: false
+        notify-culprits: false
+        notify-upstream: false
+        notify-fixers: false
+        message-type: summary
+        channels:
+            - name: '#theforeman-dev'
+              notify-only: true
         matrix-notifier: only-configurations
