--- a/puppet/modules/jenkins_job_builder/files/config/yaml/jobs/plugins/foreman_openscap.yaml
+++ b/puppet/modules/jenkins_job_builder/files/config/yaml/jobs/plugins/foreman_openscap.yaml
@@ -1,5 +1,6 @@
 - project:
     name: foreman_openscap
+    repo: foreman_openscap
     defaults: plugin
     jobs:
       - 'test_plugin_{name}_{branch}'
