Add foreman_discovery 3.0-stable branch test

--- a/puppet/modules/jenkins_job_builder/files/config/yaml/jobs/plugins/foreman_discovery.yaml
+++ b/puppet/modules/jenkins_job_builder/files/config/yaml/jobs/plugins/foreman_discovery.yaml
@@ -4,6 +4,8 @@
     branch:
       - develop:
           foreman_branch: develop
+      - 3.0-stable:
+          foreman_branch: 1.8-stable
       - 2.0-stable:
           foreman_branch: 1.7-stable
     jobs:
