Set smart_proxy_dynflow test to run on Ruby 1.9.3+ only

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_proxy_plugin.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_proxy_plugin.yaml
@@ -23,6 +23,7 @@
             plugin_repo=https://github.com/theforeman/{repo}
             plugin_branch={branch}
             plugin_name={name}
+            min_ruby193={min_ruby193}
           block: true
     publishers:
       - ircbot_freenode
@@ -31,3 +32,4 @@
     name: proxy_plugin
     repo: '{name}'
     branch: master
+    min_ruby193: false
