--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/plugins/smart_proxy_remote_execution_ssh.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/plugins/smart_proxy_remote_execution_ssh.yaml
@@ -1,6 +1,6 @@
 - project:
     name: smart_proxy_remote_execution_ssh
     defaults: proxy_plugin
-    branch: master
+    min_ruby193: true
     jobs:
       - 'test_proxy_plugin_{name}_{branch}'
