Restrict deb_coreproject build to x86 slaves

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging_build_deb_coreproject.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging_build_deb_coreproject.yaml
@@ -25,6 +25,11 @@
           - trusty
       - axis:
           type: slave
+          name: arch
+          values:
+          - x86
+      - axis:
+          type: slave
           name: label
           values:
           - debian
