Use external IP address fact for uploader SSH key access
Two new slaves are deployed on OpenStack with floating IPs, which
aren't visible to the slave's networking stack or Facter.

Add a new fact that determines the external IP and use this to restrict
access.

--- a/.gitmodules
+++ b/.gitmodules
@@ -79,3 +79,6 @@
 [submodule "puppet/modules/vcsrepo"]
 	path = puppet/modules/vcsrepo
 	url = https://github.com/puppetlabs/puppetlabs-vcsrepo
+[submodule "puppet/modules/external_ip"]
+	path = puppet/modules/external_ip
+	url = https://github.com/nightfly19/puppet-external_ip
