--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_proxy_develop.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_proxy_develop.yaml
@@ -31,9 +31,10 @@
           - 2.7.0
           - 3.0.0
           - 3.4.0
-          - 3.7.0
+          - 3.8.0
+          - 4.2.0
     execution-strategy:
-      combination-filter: '!( (ruby ==~ /(1\.9|2).*/ && puppet ==~ /2\.6.*/) || (ruby ==~ /2.*/ && puppet ==~ /(2|3\.[01]).*/) || (ruby ==~ /2.[^0]*/ && puppet ==~ /(2|3\.[0-4]).*/) )'
+      combination-filter: '!( (ruby ==~ /(1\.9|2).*/ && puppet ==~ /2\.6.*/) || (ruby ==~ /2.*/ && puppet ==~ /(2|3\.[01]).*/) || (ruby ==~ /2.[^0]*/ && puppet ==~ /(2|3\.[0-4]).*/) || (ruby ==~ /1\.(8|9\.2).*/ && puppet ==~ /4\..*/) )'
     builders:
       - test_proxy
     publishers:
