Fix for jjb 1.3.0 compatibility

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_proxy_develop.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_proxy_develop.yaml
@@ -44,7 +44,7 @@
         results: 'jenkins/reports/unit/*.xml'
     - archive:
         artifacts: 'pkg/*'
-        only-successful: true
+        only-if-success: true
     - trigger-parameterized-builds:
       - project: release_nightly_build_rpm, release_nightly_build_deb
         condition: SUCCESS
