--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/publishers/systest_foreman.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/publishers/systest_foreman.yaml
@@ -4,7 +4,7 @@
     - archive:
         artifacts: 'debug/*,*.bats.out,*.tap'
         allow-empty: true
-        only-successful: false
+        only-if-success: false
     - tap:
         results: '*.bats.out'
         fail-if-no-results: true
