Add test_plugin_matrix job configuration

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/deploy_deb.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/deploy_deb.yaml
@@ -24,6 +24,5 @@
           default: nightly
           description: 'Repo on staging-deb to consume. This will have "theforeman-" prefixed automatically, so e.g. nightly, 1.6'
     wrappers:
-      - timeout:
-          timeout: 30
-          type: absolute
+      - abort_build:
+          timeout_min: 30
