Fix git remote name

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_plugin_matrix.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_plugin_matrix.yaml
@@ -31,7 +31,7 @@
       - git:
           url: ${foreman_repo}
           branches:
-            - upstream/${foreman_branch}
+            - origin/${foreman_branch}
           basedir: 'foreman'
           prune: true
           wipe-workspace: true
