Set branch parameter by default for test_katello_core

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_katello_core.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_katello_core.yaml
@@ -6,6 +6,11 @@
       numToKeep: 32
     properties:
       - github_katello
+    parameters:
+      - string:
+          name: branch
+          default: master
+          description: "Branch to run test suite on"
     scm:
       - katello
     axes:
