Re-enable concurrent builds on test_katello_core

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_katello_core.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_katello_core.yaml
@@ -11,6 +11,7 @@
           name: branch
           default: master
           description: "Branch to run test suite on"
+    concurrent: true
     scm:
       - katello
     axes:
