--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/scm/katello.org.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/scm/katello.org.yaml
@@ -9,3 +9,5 @@
           - 'origin/KATELLO-2.0'
           - 'origin/KATELLO-2.1'
           - 'origin/KATELLO-2.2'
+          - 'origin/KATELLO-2.3'
+          - 'origin/KATELLO-2.4'
