--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_develop.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_develop.yaml
@@ -33,6 +33,7 @@
           values:
             - fast
     builders:
+      - gemset_create
       - test_develop
     publishers:
       - gemset_cleanup
