--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_katello_core.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_katello_core.yaml
@@ -37,6 +37,7 @@
             - el7
     builders:
       - clone_foreman
+      - gemset_create
       - test_katello
     publishers:
       - archive:
