--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/deploy_katello_site.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/deploy_katello_site.yaml
@@ -3,10 +3,16 @@
     node: 'admin && sshkey'
     scm:
       - katello.org
+    parameters:
+      - string:
+          name: ruby
+          default: 2.0.0
+          description: 'Ruby version to build with'
     triggers:
       - github
       - pollscm: '*/5 * * * *'
     builders:
+      - gemset_create
       - deploy_katello_site
     publishers:
       - gemset_cleanup
