--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_hammer_cli_foreman.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_hammer_cli_foreman.yaml
@@ -22,6 +22,7 @@
             - 1.9.3
             - 2.0.0
     builders:
+      - gemset_create
       - test_hammer_cli_foreman
     publishers:
       - archive:
