Revert "Restrict test_katello_core to el7 slaves"
This reverts commit 8f4feb3e1d4fc9443a7518c1497d0e7af4d89ae7.

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_katello_core.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_katello_core.yaml
@@ -34,7 +34,7 @@
           type: label-expression
           name: slave
           values:
-            - el7
+            - fast
     builders:
       - clone_foreman
       - test_katello
