Test foreman_remote_execution against develop

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/plugins/foreman_remote_execution.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/plugins/foreman_remote_execution.yaml
@@ -3,6 +3,6 @@
     defaults: plugin
     branch:
       - master:
-          foreman_branch: 1.10-stable
+          foreman_branch: develop
     jobs:
       - 'test_plugin_{name}_{branch}'
