Manage SELinux configs for freight and rsync access
Content stored in the web root should also be accessible via rsync, so
use a shared context.  Freight staing content should all be under the
public content context so it remains correct when copied to the web
roots.

--- a/.gitmodules
+++ b/.gitmodules
@@ -89,3 +89,6 @@
 [submodule "puppet/modules/httpauth"]
 	path = puppet/modules/httpauth
 	url = https://github.com/jamtur01/jamtur01-httpauth.git
+[submodule "puppet/modules/selinux"]
+	path = puppet/modules/selinux
+	url = https://github.com/jfryman/puppet-selinux.git
