--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/scm/foreman.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/scm/foreman.yaml
@@ -5,4 +5,4 @@
          url: git://github.com/theforeman/foreman.git
          wipe-workspace: true
          branches:
-          - 'develop'
+          - '{branch}'
