--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/scm/foreman-proxy.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/scm/foreman-proxy.yaml
@@ -4,4 +4,4 @@
       - git:
          url: git://github.com/theforeman/smart-proxy.git
          branches:
-          - 'develop'
+          - '{branch}'
